--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
     <script src="main.js"></script>
+    <script src=".//oop/alkotas_data.js"></script>
+    <script src=".//oop/manager.js"></script>
     <script src="./oop/area.js"></script>
     <script src="./oop/main.js"></script>
 </body>
