functions-be athelyezes sima

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <script src="./functions.js"></script>
     <script src="main.js"></script>
     <script src=".//oop/alkotas_data.js"></script>
     <script src=".//oop/manager.js"></script>
