--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src=".//oop/alkotas_data.js"></script>
     <script src=".//oop/manager.js"></script>
     <script src="./oop/area.js"></script>
+    <script src="./oop/filter.js"></script>
     <script src="./oop/main.js"></script>
 </body>
 </html>
